Dont place filter widget within a toolbar. It appears as if when a lineedit (QLineEdit, KLineEdit, etc.) is in the toolbar and has focus when it is desroyed, then a crash happens - removing it from the toolbar and things are OK.

BUG: 195682

svn path=/branches/KDE/4.3/kdebase/workspace/; revision=999372